# imputr

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  imputr.code-workspace  lumache.py  pyproject.toml  test.ipynb
.github/workflows/: release.yml
datasets/unittestsets/: DigiDB_digimonlist_small.csv
docs/: requirements.txt
docs/source/: api.rst  concepts.rst  conf.py  contributionjumpstart.rst  coreclass.rst  examples.rst  index.rst  usage.rst
docs/source/_templates/: custom-module-template.rst
impute/: _base.py
imputr/: __init__.py  _base.py  _constants.py  autoimputer.py  column.py  meanimputer.py  types.py
imputr/domain/: __init__.py  column.py  table.py  types.py
imputr/domain/imputers/: _base.py
imputr/imputers/: __init__.py  _base.py  autoimputer.py  meanimputer.py
imputr/strategy/: __init__.py  _base.py  mean.py  multivariate.py  randomforest.py  univariate.py
strategy/: _base.py  multivariate.py
tests/: test_auto_imputer.py  test_base.py  test_column.py  test_mean_imputer.py  test_multivariate.py  test_table.py  test_types.py
