[tool]
[tool.poetry]
name = "imputr"
version = "0.1.0"
description = 'Imputing missing values in your data science.'
readme = "README.md"
license =  "Apache-2.0"
authors = [
  "Rauf Akdemir <orhanrauf@gmail.com>",
  "Gudmundur Orri Palson <gudmundurorri4@gmail.com>"
]
urls.Homepage = "https://github.com/imputr/imputr"
urls.Source = "https://github.com/imputr/imputr"
urls.Tracker = "https://github.com/imputr/imputr/issues"
classifiers = [
   'Development Status :: 2 - Pre-Alpha',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: Unix',
    'Operating System :: POSIX :: Linux',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Internet',
]

packages = [
    { include = "imputr" }
]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
pandas = "^1.3"
scikit-learn = "^1.0.2"
